# bevy_squares

./: Cargo.toml  README  README.md
src/: animation.rs  main.rs  text_sprite.rs
