[package]
name = "bevy_2048"
version = "0.1.0"
authors = ["Marcel Müller <neikos@neikos.email>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.1.3"
env_logger = "0.7.1"
rand = "0.7.3"
bracket-color = "0.8.1"
bevy_prototype_lyon = { git = "https://github.com/Nilirad/bevy_prototype_lyon.git" }
